@@ -7,17 +7,21 @@ plugins {
 group = 'com.myrpggame'
 version = '1.0-SNAPSHOT'
 
+javafx {
+    version = "21.0.8"
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
+}
+
 repositories {
     mavenCentral()
 }
 
-javafx {
-    version = "21.0.8"
-    modules = [ 'javafx.controls', 'javafx.fxml']
-}
-
 dependencies {
     implementation project(':core')
+}
+
+repositories {
+    mavenCentral()
 }
 
 application {
@@ -26,4 +30,8 @@ application {
 
 run {
     workingDir = file("../core/src/main/resources/assets")
+    jvmArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml,javafx.media'
+    ]
 }
